// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skip links should render navigation link 1`] = `
<withI18nextTranslation(SkipLinks)
  mainId="#my-custom-main-id"
  navigationId="#my-custom-nav-id"
  t={[Function]}
>
  <nav
    aria-label="Skip links"
    className="theme-tc-skip-links"
  >
    <ul>
      <li
        key="navigation"
      >
        <SkipTo
          href="#my-custom-nav-id"
          label="Skip to navigation"
        >
          <a
            href="#my-custom-nav-id"
          >
            <span
              className="theme-icon"
            >
              <Icon
                name="talend-arrow-left"
                transform="rotate-270"
              >
                <Coral.Icon
                  name="talend-arrow-left"
                  transform="rotate-270"
                />
              </Icon>
            </span>
            <span
              className="theme-text"
            >
              Skip to navigation
            </span>
          </a>
        </SkipTo>
      </li>
      <li
        key="main"
      >
        <SkipTo
          href="#my-custom-main-id"
          label="Skip to main content"
        >
          <a
            href="#my-custom-main-id"
          >
            <span
              className="theme-icon"
            >
              <Icon
                name="talend-arrow-left"
                transform="rotate-270"
              >
                <Coral.Icon
                  name="talend-arrow-left"
                  transform="rotate-270"
                />
              </Icon>
            </span>
            <span
              className="theme-text"
            >
              Skip to main content
            </span>
          </a>
        </SkipTo>
      </li>
    </ul>
  </nav>
</withI18nextTranslation(SkipLinks)>
`;

exports[`Skip links should render only main link 1`] = `
<withI18nextTranslation(SkipLinks)
  mainId="#my-custom-main-id"
  t={[Function]}
>
  <nav
    aria-label="Skip links"
    className="theme-tc-skip-links"
  >
    <ul>
      <li
        key="main"
      >
        <SkipTo
          href="#my-custom-main-id"
          label="Skip to main content"
        >
          <a
            href="#my-custom-main-id"
          >
            <span
              className="theme-icon"
            >
              <Icon
                name="talend-arrow-left"
                transform="rotate-270"
              >
                <Coral.Icon
                  name="talend-arrow-left"
                  transform="rotate-270"
                />
              </Icon>
            </span>
            <span
              className="theme-text"
            >
              Skip to main content
            </span>
          </a>
        </SkipTo>
      </li>
    </ul>
  </nav>
</withI18nextTranslation(SkipLinks)>
`;
